package com.nashss.se.yodaservice.models;

public class DictationModel {
}
